--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   "dependencies": {
     "@amap/amap-jsapi-loader": "^1.0.1",
     "animate.css": "^4.1.1",
+    "ant-design-vue": "^3.2.10",
     "gsap": "^3.10.4",
     "pinia": "^2.0.14",
     "vue": "^3.2.25",
     "vue-router": "^4.0.15"
   },
   "devDependencies": {
+    "@types/node": "^18.6.3",
     "@vitejs/plugin-vue": "^2.3.3",
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
